src/content/docs/0.10.0/configuration/index.mdx
---
title: General configuration
description: Configuring rmpc
sidebar:
    order: 10
slug: 0.10.0/configuration
---

import { LinkCard, CardGrid } from "@astrojs/starlight/components";
import ConfigValue from "../../../../components/ConfigValue.tsx";

Rmpc uses [ron](https://github.com/ron-rs/ron) format for its configuration file. The file can be located at:

- `$XDG_CONFIG_HOME/rmpc/config.ron`
- `$HOME/.config/rmpc/config.ron`
- `Specific path specified by the --config flag`

## Bootstrapping a config file

Config file can be bootstrapped by running the following command:

```bash frame=none showLineNumbers=false
rmpc config > ~/.config/rmpc/config.ron
```

## Config file structure

Below is a list of properties that can be changed.

### address

<ConfigValue name="address" type={['"<ip>:<port>"', '"/path/to/socket"']} />

The address to connect to. Address can be either an IP address with a port or a UNIX domain socket path.

The order of precedence is as follows:

1. `--address` and `--password` passed to rmpc as command line arguments
2. `$MPD_HOST` and `$MPD_PORT` environment variables
    - If `$MPD_PORT` is not provided and `$MPD_HOST` starts with `~` or `/`, it is assumed to be a path to a unix socket
    - If `$MPD_PORT` is not provided and `$MPD_HOST` is an IP address and, the default port of `6600` is used
    - Password can be provided via `$MPD_HOST` in the `password@host` format.
3. The `address` and `password` values from config file
4. And finally, if none of the above are provided, the default of `127.0.0.1:6600` is used

Address and password from different sources cannot be mixed and matched.

### password

<ConfigValue name="password" type="string" />

Provide MPD with password upon connecting. Set to `None` or omit completely if your MPD is not configured to use a password.

### cache_dir

<ConfigValue name="cache_dir" type="string" optional />

Directory for rmpc's cache files. Used for files downloaded for youtube and might be used for more in the future.

### lyrics_dir

<ConfigValue name="lyrics_dir" type="string" optional />

Directory where rmpc should search for `lrc` files. Please see the [lyrics page](/0.10.0/configuration/lyrics) for more information.

### lyrics_offset_ms

<ConfigValue name="lyrics_offset_ms" type="number" />

Offset to apply to all lyrics globally in milliseconds. Defaults to 0.
Negative offset means that the lyrics will appear later and positive means they will appear sooner.

### mpd_read_timeout_ms

<ConfigValue name="mpd_read_timeout_ms" type="number" />

How long to wait for response to MPD command before giving up and reconnecting. Defaults to `10_000` milliseconds.

### mpd_write_timeout_ms

<ConfigValue name="mpd_write_timeout_ms" type="number" />

How long to wait for write to MPD socket to finish before giving up and reconnecting. Defaults to `5_000` milliseconds.

### mpd_idle_read_timeout_ms

<ConfigValue name="mpd_write_timeout_ms" optional type="number" />

By default the client will wait forever for data from MPD to appear while being idle. This makes it timeout after the
specified timeout and try again. Defaults to None.

:::caution
Do not set this option. Only reason to use this is if you are experiencing connection issues and rmpc hanging after a disconnect.
:::

### rewind_to_start_sec

<ConfigValue name="rewind_to_start_sec" optional type="number" />

`PreviousTrack` will rewind to start if elapsed time is past the configured value. `PreviousTrack` will always switch to
the previous track if not configured or set to `None`.

### keep_state_on_song_change

<ConfigValue name="keep_state_on_song_change" type="bool" />

Whether to keep paused the current playback state when using the `NextTrack/PreviousTrack` actions.
Defaults to `true`.

### theme

<ConfigValue optional name="theme" type="string" />

Theme file to use. If set to `None` or absent, the default theme is used. More info at:

<LinkCard
    title="Configuring themes"
    description="Get the default theme file and customize it"
    href="/0.10.0/configuration/theme/"
/>

### album_art

<ConfigValue name="album_art" type="other" href="/0.10.0/configuration/album-art" />

Various options for album art display. By default should not be needed to be specified. More info at [album art page](/0.10.0/configuration/album-art#configuration)

### cava

<ConfigValue name="cava" type="other" customText="<Cava>" href="/0.10.0/configuration/cava" />

Configures integration with cava. This part focuses on configuring cava itself, display configuration is available in the theme.
More info on the [cava](/0.10.0/configuration/cava) page.

### keybinds

<ConfigValue name="keybinds" type="other" customText="<keybinds>" href="/0.10.0/configuration/keybinds/" />

Keybinds to use. The default keybinds are used if this property is absent. More info at:

<LinkCard title="Configuring keybinds" description="Customize the keybinds" href="/0.10.0/configuration/keybinds/" />

### volume_step

<ConfigValue name="volume_step" type="number" />

Determines the step when changing volume with the volume up and down keybinds. Default is 5%.

### max_fps

<ConfigValue name="max_fps" type="number" />

Rmpc batches rendered frames to save resources, meaning it could skip a render on input and make the frame
a bit delayed if many frames are requested at the same time. This option sets how many frames rmpc can render
in one second. Default is `30`.

### scrolloff

<ConfigValue name="scrolloff" type="number" />

Minimal number of screen lines to keep above and below the cursor. Cursor will always be in the middle of the screen
if set to value bigger than half the viewport height. Default is `0`.

### wrap_navigation

<ConfigValue name="wrap_navigation" type="bool" />

Whether to wrap around on Up/Down action in queue/browser panes upon reaching bottom/top. Default is `false`.

### enable_mouse

<ConfigValue name="enable_mouse" type="bool" />

Enables mouse support. Currently only seeking the currently playing song by clicking on the progress bar at the bottom
of the screen and switching tabs is supported. Enabled by default.

### enable_config_hot_reload

<ConfigValue name="enable_config_hot_reload" type="bool" />

Whether rmpc should watch its config directory and reload the config when it changes. Most options can be changed during
runtime but some will still require you to restart rmpc. These include things like album art method and MPD connection
information.
Config hot reload is enabled by default.

### status_update_interval_ms

<ConfigValue name="status_update_interval_ms" type="number" optional />

Interval in milliseconds to update the status when a song is playing. Status means song progress, current bitrate, etc.
Default is 1000ms.

### select_current_song_on_change

<ConfigValue name="select_current_song_on_change" type="bool" />

If set to true, the current song is selected in the queue table when it changes. Defaults to false if not present.

### center_current_song_on_change

<ConfigValue name="center_current_song_on_change" type="bool" />

:::note
`select_current_song_on_change` must also be set to true for this to work
:::

If set to true, the current song is centered in the queue when it changes while still allowing you to move in the
queue table with your normal [scrolloff](#scrolloff). Defaults to false if not present.

### on_song_change

<ConfigValue name="on_song_change" type="other" customText={'["notify-send", "song changed!"]'} />

Execute given command when the song changes. First element of the array is the command to execute and the rest are the
arguments passed to the command. Nothing will be executed if left empty. Can be used to
send [notifications](/0.10.0/guides/on_song_change) when the song changes.

### exec_on_song_change_at_start

<ConfigValue name="exec_on_song_change_at_start" type="bool" />

Execute the command provided to `on_song_change` at rmpc startup, matching the behavior of `execute_on_song_change` in ncmpcpp.

### on_resize

<ConfigValue name="on_resize" type="other" customText={'["notify-send", "rmpc resized!"]'} />

Execute given command when rmpc resizes. First element of the array is the command to execute and the rest are the
arguments passed to the command. Nothing will be executed if left empty. Check [on_resize](/0.10.0/guides/on_resize)
for more info.

### search

<ConfigValue name="search" type="other" customText="<search>" href="/0.10.0/configuration/search/" />

Configures what tags are searchable on the Search pane. Also sets whether the search should be case insensitive by
default and what kind of search mode to perform. More detail in the [Search](/0.10.0/configuration/search) section.
If not specified, the [default values](/0.10.0/reference/config) are used.

### artists

<ConfigValue name="artists" type="other" customText="<artists>" />

Configures how albums are displayed and sorted in the `Artists`, `AlbumArtists` and `Browser` panes.
Albums can display either only its name or include an album's date as well. Additionally, albums
can be sorted by their name or date.

Default:

```rust
artists: (
    album_display_mode: SplitByDate,
    album_sort_by: Date,
    album_date_tags: [Date],
),
```

#### album_display_mode

Can be one of the following:

- `SplitByDate` - songs in the album will be split into separate album entries, one for each date and the
  album date will be displayed in front of the album name in the following format: `(<date value>) <album name>`
- `NameOnly` - only one entry for an album will be created and the album date will not be displayed

#### album_sort_by

Can be one of the following:

- `Name` - albums are sorted by their name first and date second if their names are identical
- `Date` - albums will be simply sorted by date.

#### album_date_tags

List of metadata tags to search for album dates, in order of preference. Can be one of `Date` or `OriginalDate`.
When determining an album's date, rmpc will check each tag in order and use the first one found.

:::caution
Rmpc does not do any processing on the date metadata tags. They get sorted lexicographically.
:::

### ignore_leading_the

<ConfigValue name="ignore_leading_the" type="boolean" />

Leading "The" will be ignored while sorting in browser panes if set to true. Defaults to `false`
if not specified.

### browser_song_sort

<ConfigValue name="browser_song_sort" type="other" customText="SongPropertyKind[]" />

Defines how the songs are sorted in the browser panes. This is a list of [song properties](/0.10.0/configuration/properties/#song-properties).
Defaults to `[Disc, Track, Artist, Title]` which means the songs are first sorted by their `Disc` and `Track` numbers, then by `Artist` and by `Title` last.

### directories_sort

<ConfigValue name="directories_sort" type={["ModifiedTime(..)", "Format(..)", "SongFormat(..)"]} />

Determines how the entries are sorted in the directories pane. All of the properties below take
additional config options: `group_by_type` and `reverse` which groups the entries by directories,
songs and playlists and reverse the ordering respectively.

- `Format` - Songs are sorted by their displayed format.
- `SortFormat` - Similar to `Format` but songs are sorted by [browser_song_sort](/0.10.0/configuration/#browser_song_sort).
- `ModifiedTime` - Entries are sorted by their last modified time.

Defaults to `SortFormat(group_by_type: true, reverse: false)`.

### show_playlists_in_browser

<ConfigValue name="show_playlists_in_browser" type={["All", "None", "NonRoot"]} />

Whether to show playlists in browser or not. Possible values:

- `All` - Show all playlists
- `None` - Do not show playlists
- `NonRoot` - Show playlists everywhere except the root directory. This option exists because MPD
  lists all of its playlists as being inside the root directory.

Defaults to `NonRoot`.

### reflect_changes_to_playlist

<ConfigValue name="reflect_changes_to_playlist" type="bool" />

Reflects the changes from queue to the last loaded playlist. Requires MPD 0.24.0 or newer. Defaults to false.

:::caution
The way this works is very simple. Playlist's name is stored by MPD when it is loaded into the queue, even when the queue is
not currently empty! This name is cleared **ONLY** when the queue is completely cleared with the `DeleteAll` queue action.

When any change is made to the queue while any playlist name is stored, the whole playlist is replaced with the current
Queue's contents.

For example you load playlist A, then load playlist B and then make any change to the queue. This will result in playlist
B being equal to playlist A + B + the change you made.

I do not take any responsibility for any unwanted changes to the playlist.
:::
